--- a/src/PInvoke/project.json
+++ b/src/PInvoke/project.json
@@ -2,7 +2,8 @@
   "supports": {},
   "dependencies": {
     "Nerdbank.GitVersioning": "1.1.52-rc",
-    "Nuproj": "0.10.4-beta-gf7fc34e7d8"
+    "Nuproj": "0.10.4-beta-gf7fc34e7d8",
+    "Nuproj.Common":  "0.10.4-beta"
   },
   "frameworks": {
     ".NETPortable,Version=v4.5,Profile=Profile111": {}
