--- a/src/PInvoke.BCrypt/project.json
+++ b/src/PInvoke.BCrypt/project.json
@@ -2,8 +2,10 @@
   "supports": {},
   "dependencies": {
     "Nerdbank.GitVersioning": "1.1.52-rc",
+    "NuSpec.ReferenceGenerator": "1.3.3",
     "Nuproj": "0.10.10-beta-g13363167e1",
-    "Nuproj.Common":  "0.10.10-beta-g13363167e1"
+    "Nuproj.Common": "0.10.10-beta-g13363167e1",
+    "StyleCop.Analyzers": "1.0.0-beta014"
   },
   "frameworks": {
     ".NETPortable,Version=v4.5,Profile=Profile111": {}
