--- a/src/NuProj.Extra.targets
+++ b/src/NuProj.Extra.targets
@@ -15,7 +15,7 @@
       <Version>$(NuGetPackageVersion)</Version>
     </PropertyGroup>
   </Target>
-  <Target Name="CopyAssemblyToLibDotNetFolder" DependsOnTargets="ConvertItems" AfterTargets="ConvertItems">
+  <Target Name="CopyAssemblyToLibDotNetFolder" DependsOnTargets="ConvertItems" AfterTargets="ConvertItems" Condition="false">
     <ItemGroup>
       <File Include="@(File)"
             Condition=" '%(File.TargetFrameworkMoniker)' == '.NETPortable,Version=v4.5,Profile=Profile111' ">
