--- a/src/nuget.config
+++ b/src/nuget.config
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <config>
-    <add key="repositorypath" value="packages" />
+    <add key="repositorypath" value="..\packages" />
   </config>
   <packageSources>
     <add key="myget.org/F/aarnott" value="https://www.myget.org/F/aarnott/api/v2" />
