Consolidate stylecop.json to root

--- a/src/EnlistmentInfo.targets
+++ b/src/EnlistmentInfo.targets
@@ -1,12 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <Project xmlns="http://schemas.microsoft.com/developer/msbuild/2003" ToolsVersion="4.0">
-	<PropertyGroup>
-		<MSBuildAllProjects>$(MSBuildAllProjects);$(MSBuildThisFile)</MSBuildAllProjects>
-	</PropertyGroup>
+  <PropertyGroup>
+    <MSBuildAllProjects>$(MSBuildAllProjects);$(MSBuildThisFile)</MSBuildAllProjects>
+  </PropertyGroup>
 
-	<PropertyGroup>
-		<DocumentationFile Condition=" !$(MSBuildProjectName.Contains('Test')) ">$(OutputPath)$(AssemblyName).xml</DocumentationFile>
-	</PropertyGroup>
+  <PropertyGroup>
+    <DocumentationFile Condition=" !$(MSBuildProjectName.Contains('Test')) ">$(OutputPath)$(AssemblyName).xml</DocumentationFile>
+  </PropertyGroup>
+
+  <ItemGroup>
+    <AdditionalFiles Include="$(MSBuildThisFileDirectory)stylecop.json"/>
+  </ItemGroup>
 
   <Import Project="NuProj.Extra.targets" Condition=" '$(MSBuildProjectExtension)' == '.nuproj' "/>
 </Project>
