--- a/src/EnlistmentInfo.targets
+++ b/src/EnlistmentInfo.targets
@@ -5,7 +5,7 @@
   </PropertyGroup>
 
   <PropertyGroup>
-    <DocumentationFile Condition=" !$(MSBuildProjectName.Contains('Test')) ">$(OutputPath)$(AssemblyName).xml</DocumentationFile>
+    <DocumentationFile Condition=" !$(IsTestProject) ">$(OutputPath)$(AssemblyName).xml</DocumentationFile>
   </PropertyGroup>
 
   <ItemGroup>
