Update template for Shared and Desktop projects

--- a/src/PInvoke.Kernel32.Tests/PInvoke.Kernel32.Tests.csproj
+++ b/src/PInvoke.Kernel32.Tests/PInvoke.Kernel32.Tests.csproj
@@ -23,7 +23,11 @@
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
   </PropertyGroup>
   <ItemGroup>
-    <!-- A reference to the entire .NET Framework is automatically included -->
+    <Reference Include="System" />
+    <Reference Include="System.Core" />
+    <Reference Include="Microsoft.CSharp" />
+  </ItemGroup>
+  <ItemGroup>
     <None Include="project.json" />
   </ItemGroup>
   <ItemGroup>
