--- a/templates/PInvoke.LIBNAME.Desktop/PInvoke.LIBNAME.Desktop.csproj
+++ b/templates/PInvoke.LIBNAME.Desktop/PInvoke.LIBNAME.Desktop.csproj
@@ -8,11 +8,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{18BA8C60-9A63-4EEA-BB5C-C9899D86F5B8}</ProjectGuid>
+    <ProjectGuid>$guid5$</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>PInvoke</RootNamespace>
-    <AssemblyName>PInvoke.Kernel32</AssemblyName>
+    <AssemblyName>PInvoke.LIBNAME</AssemblyName>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
@@ -28,11 +28,10 @@
     <None Include="project.json" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Kernel32+SafeFindFilesHandle.cs" />
-    <Compile Include="Kernel32.cs" />
+    <Compile Include="LIBNAME.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
-  <Import Project="..\PInvoke.Kernel32.Shared\PInvoke.Kernel32.Shared.projitems" Label="Shared" />
+  <Import Project="..\PInvoke.LIBNAME.Shared\PInvoke.LIBNAME.Shared.projitems" Label="Shared" />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$([MSBuild]::GetDirectoryNameOfFileAbove($(MSBuildProjectDirectory), EnlistmentInfo.targets))\EnlistmentInfo.targets" Condition=" '$([MSBuild]::GetDirectoryNameOfFileAbove($(MSBuildProjectDirectory), EnlistmentInfo.targets))' != '' " />
 </Project>
