Reference Windows.Core from Kernel32.Desktop
This required that we retarget all PCLs to net40 instead of net45.

--- a/templates/LIBNAME.Desktop/LIBNAME.Desktop.csproj
+++ b/templates/LIBNAME.Desktop/LIBNAME.Desktop.csproj
@@ -25,6 +25,12 @@
     <Reference Include="Microsoft.CSharp" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\Windows.Core\Windows.Core.csproj">
+      <Project>{b08c3c79-4cdd-4d37-933c-07d3452fd5f1}</Project>
+      <Name>Windows.Core</Name>
+    </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
     <None Include="project.json" />
   </ItemGroup>
   <ItemGroup>
