--- a/src/User32.Desktop/project.json
+++ b/src/User32.Desktop/project.json
@@ -3,6 +3,6 @@
   "dependencies": {
   },
   "frameworks": {
-    ".NETPortable,Version=v4.0,Profile=Profile92": {}
+    ".NETFramework,Version=v4.0": {}
   }
 }
