--- a/src/Windows.Core/Windows.Core.csproj
+++ b/src/Windows.Core/Windows.Core.csproj
@@ -25,8 +25,11 @@
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="NTStatus.cs" />
+    <Compile Include="NTStatusFacilities.cs" />
+    <Compile Include="NTStatusServerity.cs" />
     <Compile Include="PInvokeExtensions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Win32ErrorCode.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="project.json" />
