--- a/src/Windows.Core/Windows.Core.csproj
+++ b/src/Windows.Core/Windows.Core.csproj
@@ -26,7 +26,7 @@
   <ItemGroup>
     <Compile Include="NTStatus.cs" />
     <Compile Include="NTStatusFacilities.cs" />
-    <Compile Include="NTStatusServerity.cs" />
+    <Compile Include="NTStatusSeverity.cs" />
     <Compile Include="PInvokeExtensions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Win32ErrorCode.cs" />
