--- a/templates/LIBNAME/LIBNAME.csproj
+++ b/templates/LIBNAME/LIBNAME.csproj
@@ -34,6 +34,7 @@
       <Name>Windows.Core</Name>
     </ProjectReference>
   </ItemGroup>
+  <Import Project="..\LIBNAME.Shared\LIBNAME.Shared.projitems" Label="Shared" />
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\Portable\$(TargetFrameworkVersion)\Microsoft.Portable.CSharp.targets" />
   <Import Project="$([MSBuild]::GetDirectoryNameOfFileAbove($(MSBuildProjectDirectory), EnlistmentInfo.targets))\EnlistmentInfo.targets" Condition=" '$([MSBuild]::GetDirectoryNameOfFileAbove($(MSBuildProjectDirectory), EnlistmentInfo.targets))' != '' " />
 </Project>
