Add helpers for SetupApi

--- a/src/SetupApi.Desktop/SetupApi.Desktop.csproj
+++ b/src/SetupApi.Desktop/SetupApi.Desktop.csproj
@@ -45,6 +45,7 @@
     <Compile Include="SetupApi+SafeDeviceInfoListHandle.cs" />
     <Compile Include="SetupApi.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SetupApi.Helpers.cs" />
   </ItemGroup>
   <Import Project="..\SetupApi.Shared\SetupApi.Shared.projitems" Label="Shared" />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
