Use classes with [StructLayout] instead of PinnedStruct<T>

--- a/src/Windows.Core.Tests/Windows.Core.Tests.csproj
+++ b/src/Windows.Core.Tests/Windows.Core.Tests.csproj
@@ -28,7 +28,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="NTStatusTests.cs" />
-    <Compile Include="PinnedStructTests.cs" />
+    <Compile Include="NullableGuidTests.cs" />
+    <Compile Include="NullableUInt32Tests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
