--- a/src/Windows.Core/Windows.Core.csproj
+++ b/src/Windows.Core/Windows.Core.csproj
@@ -24,11 +24,11 @@
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="NullableUInt32.cs" />
+    <Compile Include="NullableGuid.cs" />
     <Compile Include="NTStatus.cs" />
     <Compile Include="NTStatusFacilities.cs" />
     <Compile Include="NTStatusSeverity.cs" />
-    <Compile Include="PinnedStructExtensions.cs" />
-    <Compile Include="PinnedStruct{T}.cs" />
     <Compile Include="PInvokeExtensions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Win32ErrorCode.cs" />
