Add Win32Exception to PInvoke.Kernel32
This helps portable SKUs, which don't get that exception type.

--- a/src/EnlistmentInfo.targets
+++ b/src/EnlistmentInfo.targets
@@ -6,6 +6,7 @@
 
   <PropertyGroup>
     <DocumentationFile Condition=" !$(IsTestProject) ">$(OutputPath)$(AssemblyName).xml</DocumentationFile>
+    <DefineConstants Condition=" '$(TargetFrameworkProfile)' == '' ">$(DefineConstants);DESKTOP</DefineConstants>
   </PropertyGroup>
 
   <ItemGroup>
