--- a/src/Kernel32.Desktop/Kernel32.Desktop.csproj
+++ b/src/Kernel32.Desktop/Kernel32.Desktop.csproj
@@ -28,7 +28,10 @@
     <None Include="project.json" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Kernel32+CreateToolhelp32SnapshotFlags.cs" />
+    <Compile Include="Kernel32+PROCESSENTRY32.cs" />
     <Compile Include="Kernel32.cs" />
+    <Compile Include="Kernel32.Helpers.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
