Add OpenProcess and QueryFullProcessImageName to Kernel32

--- a/src/Kernel32.Desktop/Kernel32.Desktop.csproj
+++ b/src/Kernel32.Desktop/Kernel32.Desktop.csproj
@@ -29,7 +29,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Kernel32+CreateToolhelp32SnapshotFlags.cs" />
+    <Compile Include="Kernel32+ProcessAccess.cs" />
     <Compile Include="Kernel32+PROCESSENTRY32.cs" />
+    <Compile Include="Kernel32+QueryFullProcessImageNameFlags.cs" />
     <Compile Include="Kernel32.cs" />
     <Compile Include="Kernel32.Helpers.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
