--- a/src/Gdi32.Desktop/project.json
+++ b/src/Gdi32.Desktop/project.json
@@ -3,6 +3,9 @@
   "dependencies": {
   },
   "frameworks": {
-    ".NETFramework,Version=v4.0": {}
+    ".NETFramework,Version=v4.0": { }
+  },
+  "runtimes": {
+    "win": { }
   }
 }
