--- a/src/NCrypt/NCrypt.csproj
+++ b/src/NCrypt/NCrypt.csproj
@@ -33,6 +33,10 @@
     <None Include="project.json" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\BCrypt\BCrypt.csproj">
+      <Project>{9ce056e3-5d53-4092-97cc-78826a4d1c14}</Project>
+      <Name>BCrypt</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Windows.Core\Windows.Core.csproj">
       <Project>{b08c3c79-4cdd-4d37-933c-07d3452fd5f1}</Project>
       <Name>Windows.Core</Name>
