Disconnect NCrypt from BCrypt
Besides being unnecessary except for a few string constants that we can link in directly to avoid, the project reference was causing major problems in the build:
NCrypt.Tests (desktop) -> NCrypt (portable) -> BCrypt (portable) -> Kernel32 (portable)
As a result, Kernel32 (portable) was copied to the desktop directory, overwriting Kernel32 (desktop), leading to test failures and probably nuget packaging errors as well.

--- a/src/BCrypt/BCrypt.csproj
+++ b/src/BCrypt/BCrypt.csproj
@@ -17,6 +17,7 @@
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{786C830F-07A1-408B-BD7F-6EE04809D6DB};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
     <MinimumVisualStudioVersion>10.0</MinimumVisualStudioVersion>
+    <DefineConstants>$(DefineConstants);BCrypt</DefineConstants>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
@@ -25,6 +26,7 @@
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="BCrypt+AlgorithmIdentifiers.cs" />
     <Compile Include="BCrypt+BCryptBuffer.cs" />
     <Compile Include="BCrypt+BCryptBufferDesc.cs" />
     <Compile Include="BCrypt+SafeAlgorithmHandle.cs" />
