Split every class/enum/struct into it's own file

--- a/src/AdvApi32.Desktop/AdvApi32.Desktop.csproj
+++ b/src/AdvApi32.Desktop/AdvApi32.Desktop.csproj
@@ -38,8 +38,14 @@
     <None Include="project.json" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="AdvApi32+SafeServiceHandle.cs" />
+    <Compile Include="AdvApi32+SafeServiceHandler.cs" />
+    <Compile Include="AdvApi32+ServiceAccess.cs" />
     <Compile Include="AdvApi32+ServiceDescription.cs" />
+    <Compile Include="AdvApi32+ServiceErrorControl.cs" />
+    <Compile Include="AdvApi32+ServiceInfoLevel.cs" />
+    <Compile Include="AdvApi32+ServiceManagerAccess.cs" />
+    <Compile Include="AdvApi32+ServiceStartType.cs" />
+    <Compile Include="AdvApi32+ServiceType.cs" />
     <Compile Include="AdvApi32.cs" />
     <Compile Include="AdvApi32.Helpers.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
