--- a/src/Kernel32/Kernel32.csproj
+++ b/src/Kernel32/Kernel32.csproj
@@ -23,6 +23,11 @@
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="Kernel32+FINDEX_INFO_LEVELS.cs" />
+    <Compile Include="Kernel32+FINDEX_SEARCH_OPS.cs" />
+    <Compile Include="Kernel32+FindFirstFileExFlags.cs" />
+    <Compile Include="Kernel32+FormatMessageFlags.cs" />
+    <Compile Include="Kernel32+WIN32_FIND_DATA.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
