--- a/src/Kernel32.Desktop/Kernel32.Desktop.csproj
+++ b/src/Kernel32.Desktop/Kernel32.Desktop.csproj
@@ -28,10 +28,23 @@
     <None Include="project.json" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Kernel32+ACL.cs" />
+    <Compile Include="Kernel32+CreateFileFlags.cs" />
     <Compile Include="Kernel32+CreateToolhelp32SnapshotFlags.cs" />
+    <Compile Include="Kernel32+CreationDisposition.cs" />
+    <Compile Include="Kernel32+FileAccess.cs" />
+    <Compile Include="Kernel32+FileShare.cs" />
+    <Compile Include="Kernel32+FINDEX_INFO_LEVELS.cs" />
+    <Compile Include="Kernel32+FINDEX_SEARCH_OPS.cs" />
+    <Compile Include="Kernel32+FindFirstFileExFlags.cs" />
+    <Compile Include="Kernel32+FormatMessageFlags.cs" />
     <Compile Include="Kernel32+ProcessAccess.cs" />
     <Compile Include="Kernel32+PROCESSENTRY32.cs" />
     <Compile Include="Kernel32+QueryFullProcessImageNameFlags.cs" />
+    <Compile Include="Kernel32+SecurityImpersonationLevel.cs" />
+    <Compile Include="Kernel32+SECURITY_ATTRIBUTES.cs" />
+    <Compile Include="Kernel32+SECURITY_DESCRIPTOR.cs" />
+    <Compile Include="Kernel32+WIN32_FIND_DATA.cs" />
     <Compile Include="Kernel32.cs" />
     <Compile Include="Kernel32.Helpers.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
