--- a/src/User32.Desktop/User32.Desktop.csproj
+++ b/src/User32.Desktop/User32.Desktop.csproj
@@ -21,6 +21,10 @@
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="User32+SetWindowLongFlags.cs" />
+    <Compile Include="User32+SetWindowPosFlags.cs" />
+    <Compile Include="User32+WindowLongIndexFlags.cs" />
+    <Compile Include="User32+WindowShowStyle.cs" />
     <Compile Include="User32.cs" />
     <Compile Include="User32.Helpers.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
