--- a/src/NCrypt/NCrypt.csproj
+++ b/src/NCrypt/NCrypt.csproj
@@ -28,8 +28,11 @@
     <Compile Include="..\BCrypt\BCrypt+AlgorithmIdentifiers.cs">
       <Link>BCrypt+AlgorithmIdentifiers.cs</Link>
     </Compile>
+    <Compile Include="NCrypt+LegacyKeySpec.cs" />
     <Compile Include="NCrypt+KeyStorageProviders.cs" />
     <Compile Include="NCrypt+KeyStorageImplementationType.cs" />
+    <Compile Include="NCrypt+NCryptCreatePersistedKeyFlags.cs" />
+    <Compile Include="NCrypt+NCryptFinalizeKeyFlags.cs" />
     <Compile Include="NCrypt+NCryptSetPropertyFlags.cs" />
     <Compile Include="NCrypt+NCryptGetPropertyFlags.cs" />
     <Compile Include="NCrypt+NCryptOpenStorageProviderFlags.cs" />
