Fix project reference alias

--- a/src/BCrypt.Tests/BCrypt.Tests.csproj
+++ b/src/BCrypt.Tests/BCrypt.Tests.csproj
@@ -37,7 +37,7 @@
   <ItemGroup>
     <ProjectReference Include="..\BCrypt\BCrypt.csproj">
       <Project>{9CE056E3-5D53-4092-97CC-78826A4D1C14}</Project>
-      <Name>BCrypt.Desktop</Name>
+      <Name>BCrypt</Name>
     </ProjectReference>
     <ProjectReference Include="..\Kernel32.Desktop\Kernel32.Desktop.csproj">
       <Project>{18ba8c60-9a63-4eea-bb5c-c9899d86f5b8}</Project>
