--- a/src/EnlistmentInfo.targets
+++ b/src/EnlistmentInfo.targets
@@ -8,11 +8,11 @@
     <DocumentationFile Condition=" !$(IsTestProject) ">$(OutputPath)$(AssemblyName).xml</DocumentationFile>
     <DefineConstants Condition=" '$(TargetFrameworkProfile)' == '' ">$(DefineConstants);DESKTOP</DefineConstants>
   </PropertyGroup>
-  
+
   <ItemGroup>
     <AdditionalFiles Include="$(MSBuildThisFileDirectory)stylecop.json"/>
   </ItemGroup>
 
   <Import Project="NuProj.Extra.targets" Condition=" '$(MSBuildProjectExtension)' == '.nuproj' "/>
-  <Import Project="$([MSBuild]::GetDirectoryNameOfFileAbove($(MSBuildProjectDirectory), ExportMethods.targets))\ExportMethods.targets" Condition=" $(MSBuildProjectName.Contains('Desktop')) OR $(MSBuildProjectName) == 'BCrypt' "/>
+  <Import Project="$([MSBuild]::GetDirectoryNameOfFileAbove($(MSBuildProjectDirectory), PInvoke.Extra.targets))\PInvoke.Extra.targets" Condition=" !$(MSBuildProjectName.Contains('Test')) AND !$(MSBuildProjectName.Contains('NuGet'))  "/>
 </Project>
